tests/semantic/arrayDecl_error2.expected

Semantic Error [line 4]: 
	Invalid array declaration: 
	Expected 'Constant Integer' index type; found type: 'Constant String'
