tests/semantic/arrayDecl_error2.mtp
(* Declare an array with constant containing string*)

const index := 'Stringing';
var something : array(index) of integer;

begin

end.